--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,10 +2,15 @@
 	"root": true,
 	"extends": [
 		"wikimedia/client",
-		"wikimedia/jquery"
+		"wikimedia/jquery",
+		"wikimedia/mediawiki"
 	],
 	"globals": {
 		"mw": false,
 		"OO": false
+	},
+	"rules": {
+		"no-implicit-globals": "off",
+		"valid-jsdoc": "off"
 	}
 }
