--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
 	"private": true,
 	"scripts": {
-		"test": "grunt test"
+		"test": "grunt test",
+		"doc": "jsduck"
 	},
 	"devDependencies": {
 		"eslint-config-wikimedia": "0.16.2",
