[Vue] Add eslint to Vue code
And disable rules in SpecialGlobalWatchlist.vue as needed:
* Until live updates are implemented, alert that they don't work
* Some of the console.log calls are still useful, disable the rule
for now

Bug: T259403
Change-Id: Ie9c602cee18f8d663a8065deec4bfbce0ec22643

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,5 +15,26 @@
 		"valid-jsdoc": "off",
 		"vars-on-top": "off",
 		"one-var": "off"
-	}
+	},
+	"overrides": [
+		{
+			"files": [ "**/*.vue" ],
+			"extends": "wikimedia/vue-es5",
+			"rules": {
+				"vue/html-self-closing": [ "error", {
+					"html": {
+						"void": "never",
+						"normal": "never",
+						"component": "never"
+					}
+				} ],
+				"vue/v-bind-style": [ "warn", "longform" ],
+				"vue/v-on-style": [ "warn", "longform" ],
+				"vue/v-slot-style": [ "warn", "longform" ],
+				"no-implicit-globals": "off",
+				"vars-on-top": "off",
+				"one-var": "off"
+			}
+		}
+	]
 }
