Switch documentation to use jsdoc
Replaces use of jsduck, which is no longer maintained.

Since jsdoc has trouble with classes declared within anonymous
functions, GlobalWatchlistSiteVue and GlobalWatchlistSiteDisplay
were updated to no longer be wrapped in such anonymous functions.

Additionally, update documentation to ensure that all parameters
and return values have a description.

Bug: T138401
Change-Id: I4b8e405a3e72ef069e0aa8ede40d8a498b7e61e7

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"private": true,
 	"scripts": {
 		"test": "grunt test",
-		"doc": "jsduck"
+		"doc": "jsdoc -c jsdoc.json"
 	},
 	"devDependencies": {
 		"eslint-config-wikimedia": "0.17.0",
@@ -10,6 +10,8 @@
 		"grunt-banana-checker": "0.9.0",
 		"grunt-eslint": "23.0.0",
 		"grunt-stylelint": "0.15.0",
+		"jsdoc": "3.6.5",
+		"jsdoc-wmf-theme": "0.0.3",
 		"stylelint-config-wikimedia": "0.10.1"
 	},
 	"eslintIgnore": [
