build: Updating mediawiki/mediawiki-codesniffer to 33.0.0
Additional changes:
* Removed globals `mw`, `OO`, included via `wikimedia/mediawiki` profile (T262222).

Change-Id: I9fc4bddcb6e623a75a3a2e67f234864390159b8b

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,8 +6,6 @@
 		"wikimedia/mediawiki"
 	],
 	"globals": {
-		"mw": false,
-		"OO": false,
 		"Promise": false
 	},
 	"rules": {
@@ -18,19 +16,33 @@
 	},
 	"overrides": [
 		{
-			"files": [ "**/*.vue" ],
+			"files": [
+				"**/*.vue"
+			],
 			"extends": "wikimedia/vue-es5",
 			"rules": {
-				"vue/html-self-closing": [ "error", {
-					"html": {
-						"void": "never",
-						"normal": "never",
-						"component": "never"
+				"vue/html-self-closing": [
+					"error",
+					{
+						"html": {
+							"void": "never",
+							"normal": "never",
+							"component": "never"
+						}
 					}
-				} ],
-				"vue/v-bind-style": [ "warn", "longform" ],
-				"vue/v-on-style": [ "warn", "longform" ],
-				"vue/v-slot-style": [ "warn", "longform" ],
+				],
+				"vue/v-bind-style": [
+					"warn",
+					"longform"
+				],
+				"vue/v-on-style": [
+					"warn",
+					"longform"
+				],
+				"vue/v-slot-style": [
+					"warn",
+					"longform"
+				],
 				"no-implicit-globals": "off",
 				"vars-on-top": "off",
 				"one-var": "off",
