--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,8 @@
 		"no-implicit-globals": "off",
 		"valid-jsdoc": "off",
 		"vars-on-top": "off",
-		"one-var": "off"
+		"one-var": "off",
+		"compat/compat": "warn"
 	},
 	"overrides": [
 		{
