--- a/package.json
+++ b/package.json
@@ -2,9 +2,17 @@
 	"private": true,
 	"scripts": {
 		"test": "grunt test",
+		"selenium-daily": "npm run selenium-test",
+		"selenium-test": "wdio tests/selenium/wdio.conf.js",
 		"doc": "jsdoc -c jsdoc.json"
 	},
 	"devDependencies": {
+		"@wdio/cli": "7.4.6",
+		"@wdio/junit-reporter": "7.4.2",
+		"@wdio/local-runner": "7.4.6",
+		"@wdio/mocha-framework": "7.4.6",
+		"@wdio/spec-reporter": "7.4.3",
+		"@wdio/sync": "7.4.6",
 		"eslint-config-wikimedia": "0.20.0",
 		"grunt": "1.4.0",
 		"grunt-banana-checker": "0.9.0",
@@ -12,7 +20,9 @@
 		"grunt-stylelint": "0.16.0",
 		"jsdoc": "3.6.7",
 		"jsdoc-wmf-theme": "0.0.3",
-		"stylelint-config-wikimedia": "0.10.3"
+		"stylelint-config-wikimedia": "0.10.3",
+		"wdio-mediawiki": "1.1.1",
+		"webdriverio": "7.4.6"
 	},
 	"eslintIgnore": [
 		"vendor/**"
