--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
 	"private": true,
 	"scripts": {
-		"test": "grunt test",
+		"test": "npm run lint",
+		"lint": "npm run lint:eslint && npm run lint:styles && npm run lint:i18n",
+		"lint:eslint": "eslint --cache --max-warnings 0 .",
+		"lint:styles": "stylelint '**/*.{css,less}'",
+		"lint:i18n": "banana-checker --requireLowerCase=0 i18n/",
 		"selenium-daily": "npm run selenium-test",
 		"selenium-test": "wdio tests/selenium/wdio.conf.js",
 		"doc": "jsdoc -c jsdoc.json"
@@ -13,11 +17,9 @@
 		"@wdio/local-runner": "7.4.6",
 		"@wdio/mocha-framework": "7.4.6",
 		"@wdio/sync": "7.4.6",
+		"eslint": "7.23.0",
 		"eslint-config-wikimedia": "0.20.0",
-		"grunt": "1.4.0",
 		"grunt-banana-checker": "0.9.0",
-		"grunt-eslint": "23.0.0",
-		"grunt-stylelint": "0.16.0",
 		"jsdoc": "3.6.7",
 		"jsdoc-wmf-theme": "0.0.3",
 		"stylelint-config-wikimedia": "0.10.3",
