--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -60,6 +60,7 @@
 					"longform"
 				],
 				"vue/no-boolean-default": "off",
+				"vue/multi-word-component-names": "off",
 				"no-implicit-globals": "off",
 				"es/no-promise": "off"
 			}
