--- a/package.json
+++ b/package.json
@@ -41,8 +41,7 @@
 		"vue": "2.6.11",
 		"vue-loader": "15.9.3",
 		"vue-template-compiler": "2.6.11",
-		"wdio-mediawiki": "1.2.0",
-		"webdriverio": "7.4.6"
+		"wdio-mediawiki": "1.2.0"
 	},
 	"eslintIgnore": [
 		"vendor/**"
