--- a/package.json
+++ b/package.json
@@ -24,12 +24,11 @@
 		"@storybook/addon-storysource": "6.2.9",
 		"@storybook/addon-viewport": "6.2.9",
 		"@storybook/vue": "6.4.18",
-		"@wdio/cli": "7.4.6",
-		"@wdio/dot-reporter": "7.4.2",
-		"@wdio/junit-reporter": "7.4.2",
-		"@wdio/local-runner": "7.4.6",
-		"@wdio/mocha-framework": "7.13.2",
-		"@wdio/sync": "7.4.6",
+		"@wdio/cli": "7.30.1",
+		"@wdio/junit-reporter": "7.29.1",
+		"@wdio/local-runner": "7.30.1",
+		"@wdio/mocha-framework": "7.26.0",
+		"@wdio/spec-reporter": "7.29.1",
 		"@wikimedia/wvui": "0.3.0",
 		"eslint-config-wikimedia": "0.22.1",
 		"grunt-banana-checker": "0.10.0",
@@ -41,8 +40,7 @@
 		"vue": "2.6.11",
 		"vue-loader": "15.9.3",
 		"vue-template-compiler": "2.6.11",
-		"wdio-mediawiki": "1.2.0",
-		"webdriverio": "7.4.6"
+		"wdio-mediawiki": "2.1.0"
 	},
 	"eslintIgnore": [
 		"vendor/**"
