--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
 	"name": "GlobalWatchlist",
 	"private": true,
 	"scripts": {
-		"start-storybook": "start-storybook -p 6006",
 		"test": "npm run lint",
 		"lint": "npm run lint:eslint && npm run lint:styles && npm run lint:i18n",
 		"lint:eslint": "eslint --cache .",
@@ -10,36 +9,20 @@
 		"lint:i18n": "banana-checker --requireLowerCase=0 i18n/",
 		"selenium-daily": "npm run selenium-test",
 		"selenium-test": "wdio tests/selenium/wdio.conf.js",
-		"doc": "npm run doc:jsdoc && npm run doc:storybook",
-		"doc:jsdoc": "jsdoc -c jsdoc.json",
-		"doc:storybook": "build-storybook --quiet --loglevel warn -o docs/ui"
+		"doc": "npm run doc:jsdoc",
+		"doc:jsdoc": "jsdoc -c jsdoc.json"
 	},
 	"devDependencies": {
-		"@babel/core": "7.11.6",
-		"@storybook/addon-a11y": "6.2.9",
-		"@storybook/addon-actions": "6.2.9",
-		"@storybook/addon-backgrounds": "6.2.9",
-		"@storybook/addon-controls": "6.2.9",
-		"@storybook/addon-docs": "6.5.3",
-		"@storybook/addon-storysource": "6.2.9",
-		"@storybook/addon-viewport": "6.2.9",
-		"@storybook/vue": "6.4.18",
 		"@wdio/cli": "7.30.1",
 		"@wdio/junit-reporter": "7.29.1",
 		"@wdio/local-runner": "7.30.1",
 		"@wdio/mocha-framework": "7.26.0",
 		"@wdio/spec-reporter": "7.29.1",
-		"@wikimedia/wvui": "0.3.0",
 		"eslint-config-wikimedia": "0.24.0",
 		"grunt-banana-checker": "0.10.0",
 		"jsdoc": "3.6.10",
 		"jsdoc-wmf-theme": "0.0.3",
-		"storybook": "6.3.2",
 		"stylelint-config-wikimedia": "0.14.0",
-		"typescript": "4.0.3",
-		"vue": "2.6.11",
-		"vue-loader": "15.9.3",
-		"vue-template-compiler": "2.6.11",
 		"wdio-mediawiki": "2.1.0"
 	},
 	"eslintIgnore": [
