build: Updating eslint-config-wikimedia to 0.27.0
The following rules are failing and were disabled:
* jsdoc/no-undefined-types

Change-Id: If5b04687c9eef2d52c92102bf3dcc47f100b62d2

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,17 +18,7 @@
 				"requireReturnDescription": false
 			}
 		],
-		"jsdoc/no-undefined-types": [
-			"error",
-			{
-				"definedTypes": [
-					"GlobalWatchlistDebugger",
-					"GlobalWatchlistEntryBase",
-					"GlobalWatchlistLinker",
-					"GlobalWatchlistWatchlistUtils"
-				]
-			}
-		],
+		"jsdoc/no-undefined-types": "warn",
 		"es-x/no-promise": "warn",
 		"es-x/no-regexp-prototype-flags": "warn",
 		"es-x/no-array-prototype-entries": "warn"
