build: Updating npm dependencies
* eslint-config-wikimedia: 0.27.0 → 0.28.0
  The following rules are failing and were disabled:
  * no-jquery/no-extend

* stylelint-config-wikimedia: 0.16.1 → 0.17.1

Change-Id: Ic07171e35126b99722c9e1b036a6086ef1a09bec

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,7 +21,8 @@
 		"jsdoc/no-undefined-types": "warn",
 		"es-x/no-promise": "warn",
 		"es-x/no-regexp-prototype-flags": "warn",
-		"es-x/no-array-prototype-entries": "warn"
+		"es-x/no-array-prototype-entries": "warn",
+		"no-jquery/no-extend": "warn"
 	},
 	"overrides": [
 		{
