build: Updating npm dependencies
* eslint-config-wikimedia: 0.28.0 → 0.28.2
  The following rules are failing and were disabled:
  * es-x/no-object-assign

* stylelint-config-wikimedia: 0.17.1 → 0.17.2

Change-Id: I3b81def20c2d4e1113de81a26cd6caaedbde4191

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,7 +22,8 @@
 		"es-x/no-promise": "warn",
 		"es-x/no-regexp-prototype-flags": "warn",
 		"es-x/no-array-prototype-entries": "warn",
-		"no-jquery/no-extend": "warn"
+		"no-jquery/no-extend": "warn",
+		"es-x/no-object-assign": "warn"
 	},
 	"overrides": [
 		{
