ESLint: Lint server files with server config
Change-Id: Ibe8b0401895552462ed0172829a0b03e79cee5ae

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,70 +1,6 @@
 {
 	"root": true,
 	"extends": [
-		"wikimedia/client-es5",
-		"wikimedia/jquery",
-		"wikimedia/mediawiki"
-	],
-	"globals": {
-		"Promise": false
-	},
-	"rules": {
-		"no-implicit-globals": "off",
-		"valid-jsdoc": [
-			"error",
-			{
-				"requireParamDescription": false,
-				"requireReturn": false,
-				"requireReturnDescription": false
-			}
-		],
-		"jsdoc/no-undefined-types": "warn",
-		"es-x/no-promise": "warn",
-		"es-x/no-regexp-prototype-flags": "warn",
-		"es-x/no-array-prototype-entries": "warn",
-		"no-jquery/no-extend": "warn",
-		"es-x/no-object-assign": "warn"
-	},
-	"overrides": [
-		{
-			"files": [
-				"**/*.vue"
-			],
-			"extends": "wikimedia/vue-es5",
-			"rules": {
-				"vue/html-self-closing": [
-					"error",
-					{
-						"html": {
-							"void": "never",
-							"normal": "never",
-							"component": "never"
-						}
-					}
-				],
-				"vue/v-bind-style": [
-					"warn",
-					"longform"
-				],
-				"vue/v-on-style": [
-					"warn",
-					"longform"
-				],
-				"vue/v-slot-style": [
-					"warn",
-					"longform"
-				],
-				"vue/no-boolean-default": "off",
-				"vue/multi-word-component-names": "off",
-				"no-implicit-globals": "off",
-				"es-x/no-promise": "off",
-				"es-x/no-array-prototype-entries": "warn"
-			}
-		}
-	],
-	"settings": {
-		"polyfills": [
-			"Promise"
-		]
-	}
+		"wikimedia/server"
+	]
 }
