ESLint: Update to ES6 and autofix
Change-Id: Icf67d8395488483e7f4e6d8b1ad965703107c1df

--- a/modules/.eslintrc.json
+++ b/modules/.eslintrc.json
@@ -1,15 +1,14 @@
 {
 	"root": true,
 	"extends": [
-		"wikimedia/client-es5",
+		"wikimedia/client",
 		"wikimedia/jquery",
 		"wikimedia/mediawiki"
 	],
-	"globals": {
-		"Promise": false
+	"env": {
+		"commonjs": true
 	},
 	"rules": {
-		"no-implicit-globals": "off",
 		"valid-jsdoc": [
 			"error",
 			{
@@ -19,15 +18,6 @@
 			}
 		],
 		"jsdoc/no-undefined-types": "warn",
-		"es-x/no-promise": "warn",
-		"es-x/no-regexp-prototype-flags": "warn",
-		"es-x/no-array-prototype-entries": "warn",
-		"no-jquery/no-extend": "warn",
-		"es-x/no-object-assign": "warn"
-	},
-	"settings": {
-		"polyfills": [
-			"Promise"
-		]
+		"prefer-const": "warn"
 	}
 }
