ESLint: Manually enforce prefer-const
Change-Id: I0b572c6aa5da4df06b46fd322d275bf39002bb47

--- a/modules/.eslintrc.json
+++ b/modules/.eslintrc.json
@@ -17,7 +17,6 @@
 				"requireReturnDescription": false
 			}
 		],
-		"jsdoc/no-undefined-types": "warn",
-		"prefer-const": "warn"
+		"jsdoc/no-undefined-types": "warn"
 	}
 }
